[gd_scene load_steps=15 format=3 uid="uid://um6upy8f8l1e"]

[ext_resource type="Script" uid="uid://c5hm0q62ivno1" path="res://Scripts/main.gd" id="1_bo1nx"]
[ext_resource type="Script" uid="uid://c2sk5w3xj13hr" path="res://Scripts/game_manager.gd" id="2_8gbba"]
[ext_resource type="Shader" uid="uid://c7degfccaunnx" path="res://Scripts/Shaders/main.gdshader" id="2_hptm8"]
[ext_resource type="Script" uid="uid://7fodj0ux1u5b" path="res://Scripts/animation_manager.gd" id="2_jjvhh"]
[ext_resource type="AudioStream" uid="uid://0qe78g8xjl6p" path="res://Assets/Audio/Cards/card-place-1.ogg" id="3_344ge"]
[ext_resource type="Texture2D" uid="uid://cnmyr4rg7rswx" path="res://Assets/Cards/card_back.png" id="3_d1ilt"]
[ext_resource type="AudioStream" uid="uid://60o4x00xrgn8" path="res://Assets/Audio/Cards/card-place-2.ogg" id="4_ynf5e"]
[ext_resource type="AudioStream" uid="uid://dvkk6862pk28u" path="res://Assets/Audio/switch2.ogg" id="6_6bp64"]
[ext_resource type="Script" uid="uid://b8bycgmmlkstv" path="res://Scripts/sound_manager.gd" id="7_6iyac"]
[ext_resource type="AudioStream" uid="uid://cmih4ol04ywfi" path="res://Assets/Audio/Cards/card-shove-1.ogg" id="7_344ge"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_hptm8"]
noise_type = 2
frequency = 0.02

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_d1ilt"]
noise = SubResource("FastNoiseLite_hptm8")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6iyac"]
shader = ExtResource("2_hptm8")
shader_parameter/noise_img = SubResource("NoiseTexture2D_d1ilt")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_fdnlq"]
streams_count = 2
stream_0/stream = ExtResource("3_344ge")
stream_0/weight = 2.471
stream_1/stream = ExtResource("4_ynf5e")
stream_1/weight = 4.676

[node name="Main" type="Control" node_paths=PackedStringArray("game_manager")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bo1nx")
game_manager = NodePath("GameManager")

[node name="Background" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_6iyac")
position = Vector2(159, 76)
scale = Vector2(2.8125, 2.59375)
texture = ExtResource("3_d1ilt")

[node name="AnimationManager" type="Node" parent="."]
script = ExtResource("2_jjvhh")

[node name="SoundManager" type="Node2D" parent="."]
script = ExtResource("7_6iyac")

[node name="PutOnTableSound" type="AudioStreamPlayer2D" parent="SoundManager"]
stream = SubResource("AudioStreamRandomizer_fdnlq")
volume_db = 0.2

[node name="ButtonSound" type="AudioStreamPlayer2D" parent="SoundManager"]
stream = ExtResource("6_6bp64")
volume_db = 5.0

[node name="EraseSound" type="AudioStreamPlayer2D" parent="SoundManager"]
stream = ExtResource("7_344ge")

[node name="GameManager" type="Control" parent="." node_paths=PackedStringArray("anim", "sfx")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_8gbba")
anim = NodePath("../AnimationManager")
sfx = NodePath("../SoundManager")

[node name="Player" type="HBoxContainer" parent="GameManager"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.45
anchor_top = 0.778
anchor_right = 0.55
anchor_bottom = 0.956
offset_top = -0.0400085
offset_bottom = -0.0800018
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = -2
alignment = 1

[node name="Computer" type="HBoxContainer" parent="GameManager"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_top = 7.0
offset_right = 16.0
offset_bottom = 39.0
grow_horizontal = 2
theme_override_constants/separation = -10
alignment = 1

[node name="Check" type="HBoxContainer" parent="GameManager"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = 10.0
offset_right = 16.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayedComputerCards" type="HBoxContainer" parent="GameManager"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -38.0
offset_right = 16.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Buttons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_right = -320.0
offset_bottom = -180.0
grow_horizontal = 0
grow_vertical = 2

[node name="PlayButton" type="Button" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 88.0
offset_top = 153.0
offset_right = 109.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 6
text = "Play"

[node name="RedrawButton" type="Button" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 208.0
offset_top = 152.0
offset_right = 238.0
offset_bottom = 169.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 6
text = "Redraw
"

[node name="RedrawLabel" type="Label" parent="Buttons/RedrawButton"]
layout_mode = 0
offset_left = 7.0
offset_top = 17.0
offset_right = 27.0
offset_bottom = 30.0
theme_override_font_sizes/font_size = 8
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -17.0
offset_top = -44.0
offset_right = 17.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 6
text = "RESTART"

[connection signal="pressed" from="Buttons/PlayButton" to="GameManager" method="_on_play_button_pressed"]
[connection signal="pressed" from="Buttons/RedrawButton" to="GameManager" method="_on_redraw_button_pressed"]
[connection signal="pressed" from="RestartButton" to="GameManager" method="_on_restart_button_pressed"]
